fix server implementation

--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
 	"module": "main.js",
 	"type": "module",
 	"scripts": {
-		"start": "concurrently \"npm run dev:server\" \"npm run dev:app\"",
-		"dev:server": "nodemon",
-		"dev:app": "vite",
-		"build:app": "vite build",
-		"preview:app": "vite preview"
+		"start": "npm run dev",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"keywords": [
 		"okta",
@@ -24,12 +23,12 @@
 	"author": "Danny Fuhriman",
 	"license": "MIT",
 	"devDependencies": {
-		"concurrently": "^7.4.0",
-		"nodemon": "^1.19.4",
-		"vite": "^3.1.8"
+		"vite": "^3.1.8",
+		"vite-plugin-mix": "^0.3.1"
 	},
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^1.22.4",
+		"@okta/jwt-verifier": "^2.6.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
@@ -37,7 +36,6 @@
 		"express-jwt-authz": "^2.4.1",
 		"helmet": "^3.23.3",
 		"highlight.js": "^11.6.0",
-		"jose": "^4.9.0",
 		"jwks-rsa": "^2.1.4",
 		"morgan": "^1.10.0"
 	}
