--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
 		"express": "^4.18.2",
 		"helmet": "^3.23.3",
 		"highlight.js": "^11.6.0",
-		"jwks-rsa": "^2.1.5",
-		"morgan": "^1.10.0",
-		"njwt": "^1.2.0"
+		"morgan": "^1.10.0"
 	}
 }
