--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"express": "^4.18.2",
 		"helmet": "^3.23.3",
 		"highlight.js": "^11.6.0",
-		"morgan": "^1.10.0"
+		"jwks-rsa": "^2.1.5",
+		"morgan": "^1.10.0",
+		"node-jose": "^2.1.1"
 	}
 }
