--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
 	"license": "MIT",
 	"devDependencies": {
 		"vite": "^3.1.8",
-		"vite-plugin-mix": "^0.3.1"
+		"vite-plugin-mix": "^0.4.0"
 	},
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^1.22.4",
 		"@okta/jwt-verifier": "^2.6.0",
+		"axios": "^1.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^3.23.3",
 		"highlight.js": "^11.6.0",
 		"jsonwebtoken": "^8.5.1",
+		"jsonwebtoken-wc": "^8.5.1",
 		"jwks-rsa": "^2.1.5",
 		"morgan": "^1.10.0",
 		"node-jose": "^2.1.1"
