--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 VITE_APP_PORT=3000
 JWT_VERIFY_URL=https://api-dev.auth.rocks/verify
 
-VITE_AUTH_DOMAIN=
-VITE_AUTH_CLIENT_ID=
-
+# VITE_AUTH_DOMAIN=
+# VITE_AUTH_CLIENT_ID=
+VITE_AUTH_DOMAIN=atko-rocks-gentle-animal.demo-platform-staging.auth0app.com
+VITE_AUTH_CLIENT_ID=RBz9va21UvCeuSTYT9nMoRTZah1iTnoH
 # Permissions should be a space-separated string of permissions that will be translated into an array at runtime
 VITE_AUTH_PERMISSIONS='authRocks'
 
