--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
-	"dotenv.enableAutocloaking": false,
-	"workbench.startupEditor": "readme",
-	"security.workspace.trust.enabled": false
+	"explorer.fileNesting.enabled": true,
+	"editor.formatOnSave": true,
+	"editor.formatOnPaste": true,
+	"files.autoSave": "off",
+	"terminal.integrated.cwd": "/root/.local/share/code-server/app",
+	"terminal.integrated.defaultProfile.linux": "bash",
+	"workbench.colorTheme": "Default Dark+",
+	"workbench.editor.highlightModifiedTabs": true,
+	"workbench.startupEditor": "readme"
 }
