--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_APP_PORT=3000
 JWT_VERIFY_URL=https://api-dev.auth.rocks/verify
+VITE_SERVER_AUDIENCE=api://authrocks
 
 # VITE_AUTH_DOMAIN=
 # VITE_AUTH_CLIENT_ID=
