--- a/.vscode/code-server.service.template
+++ b/.vscode/code-server.service.template
@@ -7,6 +7,7 @@ Type=simple
 Restart=always
 RestartSec=1
 User=root
+EnvironmentFile=/etc/code-server/env
 ExecStart=/usr/bin/code-server --host 0.0.0.0 --port 8443 --cert --auth none --user-data-dir ${USER_SETTINGS_DIR} ${APP_PATH}
 [Install]
 WantedBy=multi-user.target
