--- a/.vscode/code-server.env.template
+++ b/.vscode/code-server.env.template
@@ -1,2 +1,2 @@
-AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+AWS_ACCESS_KEY_ID=${INSTRUQT_AWS_ACCESS_KEY_ID}
+AWS_SECRET_ACCESS_KEY=${INSTRUQT_AWS_SECRET_ACCESS_KEY}
