--- a/.vscode/app-server.conf.template
+++ b/.vscode/app-server.conf.template
@@ -11,3 +11,16 @@ server {
     proxy_set_header Accept-Encoding gzip;
     }
 }
+server {
+    listen 80;
+    listen [::]:80;
+    server_name gentle-animal.auth.rocks;
+
+    location / {
+    proxy_pass http://localhost:3000/;
+    proxy_set_header Host ${DOLLAR}host;
+    proxy_set_header Upgrade ${DOLLAR}http_upgrade;
+    proxy_set_header Connection upgrade;
+    proxy_set_header Accept-Encoding gzip;
+    }
+}
