--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^1.22.4",
 		"@okta/jwt-verifier": "^2.6.0",
+		"assert": "^2.0.0",
 		"axios": "^1.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
