--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 	"editor.formatOnSave": true,
 	"editor.formatOnPaste": true,
 	"files.autoSave": "off",
+	"remote.autoForwardPorts": false,
 	"security.workspace.trust.banner": "never",
 	"security.workspace.trust.enabled": false,
 	"security.workspace.trust.startupPrompt": "never",
@@ -11,6 +12,5 @@
 	"terminal.integrated.cwd": "/root/.local/share/code-server/app",
 	"workbench.colorTheme": "Default Dark+",
 	"workbench.editor.highlightModifiedTabs": true,
-	"workbench.startupEditor": "readme",
-	"dotenv.enableAutocloaking": false
+	"workbench.startupEditor": "readme"
 }
