--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,7 +40,8 @@
 				"panel": "new",
 				"showReuseMessage": false,
 				"clear": false
-			}
+			},
+			"problemMatcher": []
 		},
 		{
 			"label": "reload-window",
