remove configs from .env add to config.js

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 VITE_APP_PORT=3000
 JWT_VERIFY_URL=https://api-dev.auth.rocks/verify
-SERVER_AUDIENCE=api://authrocks
+
+# The following two variables will OVERRIDE the config.js settings if set here.
+# SERVER_AUDIENCE=api://authrocks
 
 # Permissions should be a space-separated string of permissions that will be translated into an array at runtime
-SERVER_AUTH_PERMISSIONS='authRocks'
+# SERVER_AUTH_PERMISSIONS='authRocks'
