--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"axios": "^1.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
 		"helmet": "^3.23.3",
 		"highlight.js": "^11.6.0",
 		"jsonwebtoken": "^8.5.1",
