point to prod env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_APP_PORT=3000
-JWT_VERIFY_URL=https://dev.auth.rocks/api/verify
+JWT_VERIFY_URL=https://www.auth.rocks/api/verify
 
 # The following two variables will OVERRIDE the config.js settings if set here.
 # SERVER_AUDIENCE=api://authrocks
