--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "auth-rocks-app",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Template vanilla JS application using ViteJS.",
 	"repository": {
 		"url": "https://github.com/udplabs/auth-rocks-app-template"
@@ -23,7 +23,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@auth0/auth0-spa-js": "^2.0.0",
-		"vite": "^3.1.8",
+		"vite": "^4.1.4",
 		"vite-plugin-mix": "^0.4.0"
 	},
 	"dependencies": {
@@ -40,6 +40,12 @@
 		"jwks-rsa": "^2.1.5",
 		"morgan": "^1.10.0",
 		"node-jose": "^2.1.1"
+	},
+	"overrides": {
+		"vite-plugin-mix": {
+			".": "^0.4.0",
+			"vite": "^4.1.4"
+		}
 	},
 	"stackblitz": {
 		"startCommand": "npm run dev",
