fix issues with audience and scopes

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VITE_APP_PORT=3000
 JWT_VERIFY_URL=https://www.auth.rocks/api/verify
 
-# The following two variables will OVERRIDE the config.js settings if set here.
+# The following two variables will OVERRIDE the config.js settings if set here. Don't use this unless you know what you're doing.
 # SERVER_AUDIENCE=api://authrocks
 
 # Permissions should be a space-separated string of permissions that will be translated into an array at runtime
